--- a/res/layout/startupview.xml
+++ b/res/layout/startupview.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/green"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,5 +16,15 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="Start Game" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/startGameButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:text="SOLITARE"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
