--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,5 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <color name="green">#ff009900</color>
 </resources>
