--- a/res/layout/startupview.xml
+++ b/res/layout/startupview.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.solitare2114.StartupView" >
+    tools:context="com.example.solitare4g.StartupView" >
 
     <Button
         android:id="@+id/startGameButton"
